--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
     font-family: ink free;
 }
 section{
-    background: url(205635.jpg) no-repeat center;
+    /* background: url(205635.jpg) no-repeat center; */
+    background-color: #15181a;
     min-height: 100vh;
     width: 100%;
     display: flex;
@@ -50,9 +51,14 @@ section{
 }
 /* Display Result */
 .result{
-    position: absolute;
+    /* position: absolute; */
     font-size: 25px;
+    background: transparent;
+    /* outline: none; */
+    border: 0px;
     bottom: 5px;
+    width: 380px;
+
     animation: animate 1s linear infinite;
 }
 abbr{
@@ -75,13 +81,16 @@ text-decoration: none;
     height: 90px;
     width: 100%;
     display: flex;
+    color: white;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     /* border: 1px solid rgb(66,66,66); */
     font-size: 30px;
-    font-weight: bolder;
     cursor: pointer;
+    background: transparent;
+    outline: none;
+    border: 0px;
     
 }
 .button:hover{
