--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body{
     font-family: ink free;
 }
 section{
-    /* background: url(205635.jpg) no-repeat center; */
-    background-color: #15181a;
+    background: url(205635.jpg) no-repeat center;
+/*     background-color: #15181a; */
     min-height: 100vh;
     width: 100%;
     display: flex;
